cmake_minimum_required(VERSION 3.14)
project(advent_of_code)
set(CMAKE_CXX_STANDARD 20)

add_executable(day_01 day_01/main.cpp
        day_01/main.cpp)

add_executable(day_02 day_02/main.cpp
        day_02/main.cpp)

add_executable(day_03 day_03/main.cpp
        day_03/main.cpp)

add_executable(day_04 day_04/main.cpp
        day_04/main.cpp)

add_executable(day_05 day_05/main.cpp
        day_05/main.cpp)