cmake_minimum_required(VERSION 3.14)
project(advent_of_code)
set(CMAKE_CXX_STANDARD 23)

add_executable(day_01 day_01/main.cpp
        day_01/main.cpp)

add_executable(day_02 day_02/main.cpp
        day_02/main.cpp)

add_executable(day_03 day_03/main.cpp
        day_03/main.cpp)

add_executable(day_04 day_04/main.cpp
        day_04/main.cpp)

add_executable(day_05 day_05/main.cpp
        day_05/main.cpp)

add_executable(day_06 day_06/main.cpp
        day_06/main.cpp)

add_executable(day_07 day_07/main.cpp
        day_07/main.cpp)

add_executable(day_08 day_08/main.cpp
        day_08/main.cpp)

add_executable(day_09 day_09/main.cpp
        day_09/main.cpp)